<resources>
    <string name="app_name">CarTracker</string>
    <string name="title_slide1">Driver Informations</string>
    <string name="title_slide2">Maintenance de vehicule</string>
    <string name="title_slide3">consommation du carburant</string>
    <string name="txt_slide1">Le driver doit entre tout ces informations (nom, prénom,permis....)</string>
    <string name="txt_slide2">Le driver doit entre tout ces informations (nom, prénom,permis....)</string>
    <string name="txt_slide3">En assure le suivie de votre consommation du carburant</string>
    <string name="next">Suivant</string>
    <string name="ignore">Ignorer</string>
    <string name="se_connecter">Se Connecter</string>
    <string name="inscription">S"inscrire</string>
    <string name="login">Login</string>
    <string name="forget_pwd">Mot de Passe oublie?</string>
    <string name="inscr">Inscription</string>
    <string name="instruction"> J"accept tous les terms et les conditions de l'application</string>
    <string name="change">Changer Mot de Passe</string>
    <string name="about_us">A Propos Nous</string>
    <string name="us">Nous Suivre</string>
    <string name="version">CarTracker - 8.2.10</string>
    <string name="update">Dernière mise à jour 10/11/2020</string>
    <string name="repport">Reporter</string>
    <string name="obj">  |  Objet</string>
    <string name="msg">   |  Message</string>
    <string name="nom">  |  Nom</string>
    <string name="prenom">  |  Prenom</string>
    <string name="speed">Compteur Odomètre (Km)</string>
    <string name="fuel">Carburant (L)</string>
    <string name="status">Status Actuelle</string>
    <string name="dprise">Date de prise</string>
    <string name="heureprise">Temps</string>
    <string name="dremise">Date de remise</string>
    <string name="tableauBord">Photo de tableau de borad de voiture</string>
    <string name="picVoiture">Photo de voiture</string>
    <string name="valide">Valider</string>
    <string name="deposer">Deposer</string>
    <string name="email">  |  Email</string>
    <string name="pwd">  |  Mot De Passe</string>
    <string name="save">Sauvegarder</string>
    <string name="take_car">Votre Voiture</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu_drawer">menu_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ajouterFeul">Ajouter Carburant</string>
    <string name="menu_home">Home</string>
    <string name="ajouter">Ajouter</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>
    <string name="api_key">AIzaSyBLjo7IgTJnLhK9mWF0h-7TUI3TEpESjsA</string>

</resources>