<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">
    <TextView
        android:id="@+id/text_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/card_background"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="36dp"
            android:src="@drawable/car_pic"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="Marque : "
                android:textStyle="bold"
                android:textColor="@color/dark_gray"
                android:textSize="12sp"
                android:fontFamily="@font/helvetica_bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="Marque :  "
                android:textStyle="bold"
                android:textColor="@color/dark_gray"
                android:textSize="12sp"
                android:fontFamily="@font/helvetica_bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="Matricule : "
                android:textStyle="bold"
                android:textColor="@color/dark_gray"
                android:textSize="12sp"
                android:fontFamily="@font/helvetica_bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="Status : "
                android:textStyle="bold"
                android:textColor="@color/dark_gray"
                android:textSize="12sp"
                android:fontFamily="@font/helvetica_bold"/>
        </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="476dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/cpt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_speed"
                android:drawableLeft="@drawable/ic_speed"
                android:fontFamily="@font/helvetica_light"
                android:hint="@string/speed"
                android:inputType="textEmailAddress"
                android:paddingLeft="26dp"
                android:paddingRight="26dp" />

            <EditText
                android:id="@+id/carburant"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edit_text_background"
                android:drawableLeft="@drawable/ic_fuel"
                android:fontFamily="@font/helvetica_light"
                android:hint="@string/fuel"
                android:inputType="textEmailAddress"
                android:paddingLeft="26dp"
                android:paddingRight="26dp" />

            <EditText
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_speed"
                android:drawableLeft="@drawable/ic_speed"
                android:fontFamily="@font/helvetica_light"
                android:hint="@string/status"
                android:inputType="textEmailAddress"
                android:paddingLeft="26dp"
                android:paddingRight="26dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/date"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableLeft="@drawable/ic_fuel"
                    android:fontFamily="@font/helvetica_light"
                    android:hint="@string/dprise"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/temps"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableLeft="@drawable/ic_fuel"
                    android:fontFamily="@font/helvetica_light"
                    android:hint="@string/heureprise"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/dremise"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_calendar"
                android:drawableLeft="@drawable/ic_calendar"
                android:fontFamily="@font/helvetica_light"
                android:hint="@string/dremise"
                android:inputType="textEmailAddress"
                android:paddingLeft="26dp"
                android:paddingRight="26dp" />

            <EditText
                android:id="@+id/tabPic"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edit_text_background"
                android:drawableLeft="@drawable/ic_camera"
                android:fontFamily="@font/helvetica_light"
                android:hint="@string/tableauBord"
                android:inputType="textEmailAddress"
                android:paddingLeft="26dp"
                android:paddingRight="26dp" />

            <EditText
                android:id="@+id/pic"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_camera"
                android:drawableLeft="@drawable/ic_speed"
                android:fontFamily="@font/helvetica_light"
                android:hint="@string/picVoiture"
                android:inputType="textEmailAddress"
                android:paddingLeft="26dp"
                android:paddingRight="26dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="440dp"
            android:layout_marginBottom="407dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/back_to_login"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:background="@drawable/custom_btn"
                android:fontFamily="@font/helvetica_bold"
                android:gravity="center"
                android:text="@string/valide"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                android:textStyle="bold"
                app:backgroundTint="@color/yellow"
                app:strokeColor="@color/yellow" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>