<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.Reporter.ReporterFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        ></RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@drawable/card_background"
        >
        <TextView
            android:id="@+id/rep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:text="@string/repport"
            android:textStyle="bold"
            android:textColor="@color/yellow"
            android:textSize="25sp"
            android:fontFamily="@font/helvetica_bold"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="300dp"
            android:background="@drawable/ic_send"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="51dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/nom"
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/ic_user"
                    android:fontFamily="@font/helvetica_light"
                    android:hint="@string/nom"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:drawableLeft="@drawable/ic_user" />

                <EditText
                    android:id="@+id/prenom"
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="-25dp"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/ic_user"
                    android:fontFamily="@font/helvetica_light"
                    android:hint="@string/prenom"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="16dp"
                    android:paddingRight="26dp"
                    android:drawableLeft="@drawable/ic_user" />
            </LinearLayout>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_at"
                android:fontFamily="@font/helvetica_light"
                android:hint="  |  hn_nekamiche@gmail.com"
                android:inputType="textEmailAddress"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:drawableLeft="@drawable/ic_at" />

            <EditText
                android:id="@+id/obj"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_email"
                android:fontFamily="@font/helvetica_light"
                android:hint="@string/obj"
                android:inputType="textEmailAddress"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:drawableLeft="@drawable/ic_email" />

            <EditText
                android:id="@+id/msg"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_msg"
                android:fontFamily="@font/helvetica_light"
                android:hint="@string/msg"
                android:inputType="textEmailAddress"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:drawableLeft="@drawable/ic_msg" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>